--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>me.tymefly</groupId>
+    <groupId>com.github.tymefly</groupId>
     <artifactId>srec</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
     <name>SRecord Utilities</name>
 
     <properties>
